added pop-up component

--- a/css/style.css
+++ b/css/style.css
@@ -33,5 +33,6 @@
 @import "components/form-comment.css";
 @import "components/submit.css";
 @import "components/button.css";
+@import "components/pop-up.css";
 
 
