--- a/css/components/check.css
+++ b/css/components/check.css
@@ -1,12 +1,20 @@
 .check {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    justify-content: left;
     width: 100%;
+}
+
+.check__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
     margin-top: 40px;
     font-family: "OpenSans Regular", sans-serif;
     font-size: 18px;
     color: #283645;
+    cursor: pointer;
 }
 
 .check__input {
