added media queries to section component and changed some components

--- a/css/components/section.css
+++ b/css/components/section.css
@@ -21,3 +21,16 @@
     margin: 0 auto;
     width: 73%;
 }
+
+@media (max-width: 1023px) {
+    .content-section__wrapper {
+        width: 94%;
+    }
+}
+
+
+@media (max-width: 767px) {
+    .content-section__wrapper {
+        width: 87%;
+    }
+}
