--- a/css/components/ad.css
+++ b/css/components/ad.css
@@ -1,12 +1,8 @@
-.ad .content-section__wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 87%;
+.ad {
     padding: 40px 0;
 }
 
-.ad .ad__title {
+.ad__title {
     text-align: center;
     font-family: "OpenSans Regular", sans-serif;
     font-size: 14px;
