--- a/css/components/form-section.css
+++ b/css/components/form-section.css
@@ -66,3 +66,51 @@
 .form-section__subtitle span {
     color: #d22856;
 }
+
+@media (min-width: 768px) {
+    .form-section__item {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 50px;
+    }
+
+    .form-section__label {
+        margin-bottom: 0;
+        margin-right: 20px;
+        padding-left: 0;
+        font-size: 14px;
+    }
+
+    .form-section__input {
+        width: 100%;
+        padding: 20px 22px;
+        font-size: 18px;
+    }
+
+    .form-section__textarea {
+        width: 84%;
+        height: 156px;
+        margin-top: 20px;
+        padding: 20px;
+        border: 2px solid #e5e5e5;
+        border-radius: 3px;
+        resize: none;
+        font-family: "OpenSans Regular", sans-serif;
+        font-size: 18px;
+        line-height: 1.9;
+        color: #283645;
+    }
+
+    .form-section__subtitle {
+        font-family: "OpenSans Regular", sans-serif;
+        font-size: 14px;
+        color: #283645;
+        text-transform: uppercase;
+    }
+
+    .form-section__subtitle span {
+        color: #d22856;
+    }
+
+}
