--- a/css/components/apps.css
+++ b/css/components/apps.css
@@ -1,4 +1,17 @@
 .apps {
-    padding: 40px 0;
+    padding: 75px 0 40px;
     background: #f2f2f2;
+}
+
+@media (min-width: 768px) {
+    .apps {
+        order: 2;
+        background: none;
+        padding: 10px 0 50px;
+        margin-bottom: 60px;
+    }
+
+    .apps .content-section__wrapper {
+        width: 80%;
+    }
 }
