--- a/css/components/form-comment.css
+++ b/css/components/form-comment.css
@@ -1,3 +1,9 @@
 .form-comment {
-    padding: 40px 0;
+    padding: 60px 0 40px;
+}
+
+@media (min-width: 768px) {
+    .form-comment {
+        order: 5;
+    }
 }
