--- a/css/components/form-contacts.css
+++ b/css/components/form-contacts.css
@@ -1,3 +1,29 @@
 .form-contacts {
     padding: 40px 0 15px;
 }
+
+@media (min-width: 768px) {
+    .form-contacts {
+        order: 3;
+        margin-bottom: 60px;
+    }
+
+    .form-contacts .content-section__wrapper {
+        width: 80%;
+    }
+
+    .form-contacts .form-section__item {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        margin-bottom: 35px;
+    }
+
+    .form-contacts .form-section__input {
+        width: 81%;
+        margin-bottom: 16px;
+    }
+
+    .form-contacts .form-section__label {
+        padding-left: 20px;
+    }
+}
