--- a/css/components/form-comment.css
+++ b/css/components/form-comment.css
@@ -5,5 +5,11 @@
 @media (min-width: 768px) {
     .form-comment {
         order: 5;
+        padding: 45px 0 50px;
+        margin-bottom: 65px;
+    }
+
+    .form-comment .content-section__wrapper {
+        width: 80%;
     }
 }
