--- a/css/components/button.css
+++ b/css/components/button.css
@@ -11,3 +11,9 @@
     text-transform: uppercase;
     cursor: pointer;
 }
+
+@media (min-width: 768px) {
+    .button {
+        width: 300px;
+    }
+}
