changed width for form-section__title

--- a/css/components/form-section.css
+++ b/css/components/form-section.css
@@ -92,7 +92,7 @@
 
     .form-section__title {
         position: unset;
-        width: fit-content;
+        width: auto;
         margin: 0 auto;
         text-align: center;
         padding: 0 25px;
