--- a/css/components/apps.css
+++ b/css/components/apps.css
@@ -15,3 +15,16 @@
         width: 80%;
     }
 }
+
+@media (min-width: 1024px) {
+    .apps {
+        align-items: flex-end;
+        width: 48%;
+        padding: 10px 0 50px;
+        margin: 0 0 60px;
+    }
+
+    .apps .content-section__wrapper {
+        width: 65%;
+    }
+}
