--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 @import "components/app-download.css";
 @import "components/offers.css";
 @import "components/offers-list.css";
-@import "components/section.css";
+@import "components/content-section.css";
 @import "components/facts.css";
 @import "components/testimonials.css";
 @import "components/comments.css";
