--- a/css/components/form-contacts.css
+++ b/css/components/form-contacts.css
@@ -27,3 +27,29 @@
         padding-left: 20px;
     }
 }
+
+@media (min-width: 1024px) {
+    .form-contacts {
+        padding: 40px 0 25px;
+    }
+
+    .form-contacts .content-section__wrapper {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 87%;
+    }
+
+    .form-contacts .form-section__item {
+        width: 46%;
+        margin-bottom: 0;
+    }
+
+    .form-contacts .form-section__input {
+        width: 81%;
+        margin-bottom: 16px;
+    }
+
+    .form-contacts .form-section__label {
+        padding-left: 20px;
+    }
+}
