--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@
 
 /*FORM*/
 @import "components/ad.css";
+@import "components/title.css";
 @import "components/form.css";
 @import "components/form-section.css";
 @import "components/user-data.css";
@@ -35,4 +36,6 @@
 @import "components/button.css";
 @import "components/pop-up.css";
 
+/*GALLERY*/
 
+@import "components/gallery-title.css";
