--- a/css/components/banner.css
+++ b/css/components/banner.css
@@ -28,6 +28,8 @@
     position: absolute;
     bottom: 0;
     right: 100px;
+    width: 75%;
+    max-width: 1050px;
 }
 
 .banner__wrapper {
@@ -113,6 +115,7 @@
         position: absolute;
         bottom: 0;
         right: 0;
+        width: auto;
     }
 
     .banner__wrapper {
