--- a/css/components/filter.css
+++ b/css/components/filter.css
@@ -5,6 +5,13 @@
 
 .filter__wrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.filter__image-wrapper {
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -127,13 +134,15 @@
         padding: 55px 0;
     }
 
-    .filter .content-section__wrapper {
+    .filter__wrapper {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        width: 100%;
+        height: 100%;
     }
 
-    .filter__wrapper {
+    .filter__image-wrapper {
         width: 48%;
         margin-bottom: 0;
     }
@@ -204,5 +213,57 @@
 
     .filter__buttons {
         width: 90%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .filter {
+        padding: 0;
+        background: none;
+        margin-bottom: 25px;
+    }
+
+    .filter .content-section__wrapper {
+        background: #f2f2f2;
+    }
+
+    .filter__wrapper {
+        padding: 55px 0;
+        width: 95%;
+        max-width: 800px;
+    }
+
+    .filter__image-wrapper {
+        width: 300px;
+        margin-bottom: 0;
+    }
+
+    .filter__main {
+        width: 410px;
+    }
+
+    .filter__item-wrapper {
+        width: 50px;
+        height: 50px;
+    }
+
+    .filter__input {
+        display: flex;
+        margin-right: 30px;
+    }
+
+
+    .filter__input--mobile {
+        display: none;
+    }
+
+    .filter__buttons {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
+
+    .filter__btn {
+        width: 45%;
     }
 }
