--- a/css/components/gallery-title.css
+++ b/css/components/gallery-title.css
@@ -15,3 +15,13 @@
         width: 70%;
     }
 }
+
+@media (min-width: 1024px) {
+    .gallery-title {
+        padding: 90px 0;
+    }
+
+    .gallery-title .title {
+        width: 65%;
+    }
+}
